# vmark

./: .cc-suite.md  .dependency-cruiser-known-violations.json  .dependency-cruiser.cjs  .gitignore  .mcp.json  .size-limit.cjs  AGENTS.md  CODING_GUIDE.md  README.md  eslint.config.js  knip.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  stryker.config.json  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: README.md  settings.json
.githooks/: pre-commit  pre-push
.github/: dependabot.yml
.tokenize/: config.json  ignore
dev-docs/: README.md  architecture.md  design-system.md  e2e-testing.md  improvement-audit-2026-06-12.md  large-file-open-pipeline.md  testing-hardening.md
dev-docs/grills/embedded-browser/spike1-probe/: Cargo.toml
dev-docs/grills/embedded-browser/spike1-probe/src/: main.rs
e2e/: README.md  run-journeys.mjs  smoke.mjs
scripts/: check-ai-nav-phase.sh  check-ai-nav-plan.sh  check-browser-automation-phase.sh  check-browser-phase.sh  check-browser-shell-phase.sh  check-context-menu-phase.sh  check-cross-target.sh  check-design-tokens.mjs  check-eager-chunks.mjs  check-eager-chunks.test.ts  check-ext-sync.sh  check-file-size.mjs  check-gha-phase.sh  check-i18n-keys.ts  check-index-barrels.mjs  check-index-barrels.test.ts  check-multi-format-phase.sh  check-new-deps.sh  check-slidev-kb-phase.sh  check-split-view-phase.sh  check-tauri-versions.mjs  check-tauri-versions.test.ts  check-terminal-gaps-phase.sh  check-terminal-phase.sh  check-theme-names.sh  check-wi-linkage.sh  compare-bench.mjs  compare-bench.test.ts  e2e-bridge-client.test.ts  extract-menu-ids.ts  file-size-baseline.json  gen-large-file-corpus.mjs  manualChunks.test.ts  manualChunks.ts  measure-open-latency.mjs  propagate-i18n-keys.mjs  propagate-rust-errors.mjs  setup-local-git.mjs  setup-local-git.test.mjs
src/: App.tsx  i18n.test.ts  i18n.ts  main.tsx
src-tauri/: Cargo.toml  mutants.toml  tauri.conf.json
src-tauri/capabilities/: default.json  pdf-export.json  settings.json  windows.json
src-tauri/fuzz/: Cargo.toml
src-tauri/fuzz/fuzz_targets/: parse_genie.rs  resolve_expression.rs
src-tauri/locales/: de.yml  en.yml  es.yml  fr.yml  it.yml  ja.yml  ko.yml  pt-BR.yml  zh-CN.yml  zh-TW.yml
src-tauri/resources/shell-integration/: vmark.zsh
src-tauri/resources/workflows/examples/: triage-and-translate.yml
src-tauri/src/: app_paths.rs  app_setup.rs  asset_access.rs  cli_install.rs  command_registry.rs  content_search.rs  content_search.test.rs  dock_recent.rs  external_editor.rs  file_open.rs  file_open.test.rs  file_ops.rs  file_tree.rs  file_write.rs  file_write.test.rs  lib.rs  lib.test.rs  macos_menu.rs  macos_menu_icons.rs  main.rs  mcp_bridge_path_guard.rs  mcp_server.rs  menu_events.rs  menu_events_dispatch.rs  menu_events_dispatch.test.rs  menu_events_windows.rs  menu_events_windows.test.rs  pty.rs  quarantine.rs  quit.rs  secure_store.rs  shell_env.rs  shell_env.test.rs  shell_integration.rs  spike_embed.rs  supported_files.rs  supported_files.test.rs  tab_transfer.rs  tab_transfer.test.rs  task.rs  (+13 more)
src-tauri/src/ai_provider/: cli.rs  cli.test.rs  collect.test.rs  detection.rs  endpoint.rs  http_client.rs  mod.rs  rest_api.rs  rest_providers.rs  sink.rs  sink.test.rs  spawn.rs  spawn.test.rs  types.rs
src-tauri/src/ai_provider/cli/: stream.rs
src-tauri/src/ai_provider/rest_api/: rest_model_parsers.rs
src-tauri/src/browser/: ai_commands.rs  ai_commands.test.rs  ai_policy.rs  ai_policy.test.rs  authorize.rs  authorize.test.rs  browser_store_macos.rs  commands.rs  commands.test.rs  commands_auth.rs  commands_auth.test.rs  console_shim_macos.rs  dialogs.test.rs  dialogs_macos.rs  driver_loop.test.rs  driver_loop_macos.rs  geometry.rs  geometry.test.rs  mod.rs  nav_delegate_macos.rs  nav_emit_macos.rs  nav_failure_macos.rs  nav_kvo_macos.rs  nav_payloads.test.rs  nav_payloads_macos.rs  nav_registry_identity_macos.rs  nav_registry_macos.rs  nav_registry_policy_macos.rs  nav_selectors.test.rs  nav_webview_macos.rs  navigation_policy.rs  one_shot.rs  one_shot.test.rs  operation.rs  operation.test.rs  origin_guard.rs  origin_guard.test.rs  profile_open.rs  profile_open.test.rs  recovery.rs  (+21 more)
src-tauri/src/cli_install/: dialog.rs  mod.rs  tests.rs
src-tauri/src/content_server/: commands.rs  manager.rs  manager_tests.rs  mod.rs  provision.rs  signature.rs  slidev.rs  slidev_commands.rs  spawn.rs  swap.rs
src-tauri/src/genies/: commands.rs  install.rs  mod.rs  parsing.rs  scanning.rs  tests.rs
src-tauri/src/gha_workflow/: action_fetch.rs  action_fetch.test.rs  actionlint.rs  commands.rs  mod.rs
src-tauri/src/hot_exit/: commands.rs  coordinator.rs  coordinator.test.rs  dedup.rs  merge.rs  merge.test.rs  migration.rs  migration_v3_tests.rs  migration_v4_tests.rs  migration_v5.rs  migration_v5_tests.rs  mod.rs  session.rs  storage.rs  storage.test.rs  validation.rs  validation.test.rs
src-tauri/src/mcp_bridge/: server.rs  state.rs
src-tauri/src/mcp_config/: commands.rs  config_io.rs  types.rs
src-tauri/src/menu/: accelerators.rs  accelerators.test.rs  commands.rs  dynamic.rs  localized.rs  localized.test.rs  menu_state.rs  mod.rs
src-tauri/src/menu/localized/: app_menu.rs  edit_menu.rs  export_menu.rs  export_menu.test.rs  file_menu.rs  file_submenus.rs  format_menu.rs  format_submenus.rs  insert_menu.rs  insert_submenus.rs  view_menu.rs  window_help_menu.rs
src-tauri/src/pandoc/: commands.rs  mod.rs
src-tauri/src/pdf_export/: bookmarks.rs  commands.rs  mod.rs  renderer.rs
src-tauri/src/tab_transfer/: removal.rs
src-tauri/src/window_manager/: commands.rs  document_windows.rs  document_windows.test.rs  file_open_state.rs  file_open_state.test.rs  mod.rs  path_validation.rs  path_validation.test.rs  settings_window.rs
src-tauri/src/window_status/: mod.rs
src-tauri/src/workflow/: approval.rs  commands.rs  condition.rs  condition.test.rs  condition_lexer.rs  examples.rs  expressions.rs  genie_step.rs  mod.rs  runner.rs  runner.test.rs  sandbox.rs  snapshots.rs  snapshots.test.rs  step_config.rs  template.rs  untrusted.rs
src/lib/: pty.ts  (+1 more)
(+2076 files in other folders)
