[package]
name = "vmark"
version = "0.8.32"
description = "The plain-text workspace where humans and AI collaborate"
authors = ["Xiaolai"]
license = "ISC"
edition = "2021"

[lib]
name = "vmark_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-mcp-bridge = "0.12"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
regex = "1"
urlencoding = "2"
# WHATWG-spec URL parser — the same spec the browser's `URL` implements, so the
# Rust origin guard (browser/origin_guard.rs) and the TS spec it mirrors parse
# identically instead of drifting. Already in the tree via tauri; promoting it to
# a direct dependency adds no new package to the lockfile.
url = "2"
notify = { version = "8", default-features = false, features = ["macos_fsevent"] }
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread", "process", "io-util", "time"] }
tokio-tungstenite = "0.28"
tokio-util = { version = "0.7", features = ["rt"] }
futures-util = "0.3"
portable-pty = "0.9"
toml = "1.1"
dirs = "6"
chrono = "0.4"
reqwest = { version = "0.13", features = ["json"] }
tauri-plugin-window-state = "2"
tauri-plugin-store = "2"
tempfile = "3"
sha2 = "0.10"
ed25519-dalek = "3"
base64 = "0.22"
gethostname = "1.1"
rust-i18n = "4"
# RW-16 (L8): OS-backed secret storage for API keys. Platform credential
# stores are enabled per-target below (apple-native / windows-native /
# sync-secret-service); the base dep carries no platform backend so it stays
# buildable everywhere and the `mock` store is available for tests.
keyring = { version = "3", default-features = false }
serde_yaml_ng = "0.10"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
xattr = "1"
keyring = { version = "3", features = ["apple-native"] }
objc2 = "0.6"
block2 = "0.6" # SPIKE-1/5 probe (throwaway) — remove with src/spike_embed.rs before WI-1.2
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSMenu", "NSMenuItem", "NSImage", "NSResponder", "NSDocumentController", "NSPrintInfo", "NSPrintOperation", "NSView", "NSWindow", "NSGraphics", "NSEvent"] }
objc2-foundation = { version = "0.3", features = ["NSString", "NSURL", "NSURLRequest", "NSData", "NSDate", "NSRunLoop", "NSError", "NSDictionary", "NSKeyValueObserving", "NSProcessInfo", "NSUserDefaults", "NSArray", "NSUUID"] }
objc2-web-kit = { version = "0.3", features = ["WKWebView", "WKWebViewConfiguration", "WKNavigation", "WKNavigationDelegate", "WKUIDelegate", "WKNavigationAction", "WKWindowFeatures", "WKFrameInfo", "WKPDFConfiguration", "WKSnapshotConfiguration", "WKWebsiteDataStore", "block2", "objc2-core-foundation"] }
objc2-pdf-kit = { version = "0.3", features = ["PDFDocument", "PDFOutline", "PDFPage", "PDFDestination"] }
objc2-core-foundation = { version = "0.3", features = ["CFRunLoop", "CFString"] }

# RW-16 (L8): Windows Credential Manager backend (best-effort platform).
[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

# RW-16 (L8): Linux Secret Service backend (best-effort platform).
[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service"] }

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros", "rt-multi-thread"] }

# Tauri's `test` feature enables mock_app / mock_builder for command-wiring
# tests (fs scope extension, path validation, etc.). It is scoped to non-
# Windows targets because the MockRuntime test binary triggers
# STATUS_ENTRYPOINT_NOT_FOUND (exit code 0xc0000139) at startup on
# windows-latest runners — the build links but the loader can't resolve
# a symbol in the test DLL path. macOS and Linux are fine. Callers of
# tauri::test are cfg-gated accordingly in tests.
[target.'cfg(not(target_os = "windows"))'.dev-dependencies]
tauri = { version = "2", features = ["protocol-asset", "test"] }

# Release profile tuned for distribution.
# - lto = "thin": ~5–8% smaller binary, ~25% slower link, retains good per-fn opt.
# - codegen-units = 1: aggressive optimization across the crate; slower builds.
# - strip = "symbols": drop symbol tables; macOS keeps a separate .dSYM if produced.
# - panic = "abort": ~2–3% smaller; safe because the codebase has no `catch_unwind`.
[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
